<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="login_to_your_account">Login to your \nAccount</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="error_message">Something went wrong\nLet\'s try again?</string>
    <string name="try_again">Try again</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="see_all">See All</string>
    <string name="special_offers">Special Offers</string>
    <string name="banner_text">Get discount for every order, only valid for today</string>
    <string name="banner_title">40% off</string>
    <string name="banner_image">Banner image</string>
    <string name="most_popular">Most Popular</string>
    <string name="price_format">\$%d</string>
    <string name="auth_error">Authorisation error</string>
    <string name="my_cart">My cart</string>
    <string name="total_price">Total price</string>
    <string name="checkout">Checkout</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>